@@ -20,7 +20,6 @@ confirm to save settings before exit
 
 * double click to select more...
 add programs to 'whitelist' when warning dialog appeard.
-[Auto save settings]?
 sort menu via profile
 a scroll bar menu
 Save settings that diff and full
